SourceMetaData/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Business Dev Process</fullName>
        <description>A Sales Process for Bus Dev Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Review</fullName>
        </values>
        <values>
            <fullName>Early market intelligence</fullName>
        </values>
        <values>
            <fullName>Invitation to tender%2Fpitch</fullName>
        </values>
        <values>
            <fullName>Second stage tender%2Fpitch process</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Events Process</fullName>
        <description>A Sales Process for the Events Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won %28Concession%29</fullName>
        </values>
        <values>
            <fullName>Closed Won %28LBH%29</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Viewing</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agreed_Contract_Rate__c</fullName>
        <description>Contract Rate as agreed by the customer (£)</description>
        <label>Agreed Contract Rate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <description>Length of contract</description>
        <label>Contract Length</label>
        <picklist>
            <picklistValues>
                <fullName>0-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24-36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36+ months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <description>Value of the Contract per year</description>
        <label>Indicative Annual Contract Value</label>
        <picklist>
            <picklistValues>
                <fullName>0-25k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-200k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200-300k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300-400k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400-500k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500k+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <description>Please record any feedback from customer for a Closed opportunity</description>
        <inlineHelpText>Please record any feedback from customer for a Closed opportunity</inlineHelpText>
        <label>Customer Feedback</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dates_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the start and end dates are confirmed</description>
        <inlineHelpText>Checked if the start and end dates are confirmed</inlineHelpText>
        <label>Dates Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Event end date</description>
        <inlineHelpText>The date the event is due to end</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <label>RAG Status</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selling_As__c</fullName>
        <label>Selling As</label>
        <picklist>
            <picklistValues>
                <fullName>Lampton 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hounslow Council</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Event start date</description>
        <inlineHelpText>The date the event is due to start</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Selling_As__c</columns>
        <columns>Contract_Value__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Events_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Dates_Confirmed__c</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Events</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Events Opps</label>
    </listViews>
    <listViews>
        <fullName>All_Events_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Dates_Confirmed__c</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Events</value>
        </filters>
        <label>All Events Opps</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Events_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Dates_Confirmed__c</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Events</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Events Opps</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Events_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Dates_Confirmed__c</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Events</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Events Opps</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Events_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Dates_Confirmed__c</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Events</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Events Opps</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Dev</fullName>
        <active>true</active>
        <businessProcess>Business Dev Process</businessProcess>
        <description>Business Development Opportunity</description>
        <label>Business Dev</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <businessProcess>Events Process</businessProcess>
        <description>Events Opportunity</description>
        <label>Events</label>
    </recordTypes>
    <validationRules>
        <fullName>Only_enter_feedback_on_closed_oppertunit</fullName>
        <active>true</active>
        <description>Can only add data to feedback field when an opportunity is closed</description>
        <errorConditionFormula>ISCHANGED( Customer_Feedback__c ) &amp;&amp; 
NOT(
 CONTAINS(TEXT(StageName) , &quot;Closed&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Customer_Feedback__c</errorDisplayField>
        <errorMessage>Sorry you are only allowed to add customer feedback onto an opportunity with a closed stage. Please mark opportunity as closed and then complete this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Probability_cannot_be_zero</fullName>
        <active>true</active>
        <description>Cannot leave the Probability at zero</description>
        <errorConditionFormula>( Probability = 0 ) &amp;&amp;
NOT( ISPICKVAL( StageName , &quot;Closed Lost&quot;) )</errorConditionFormula>
        <errorMessage>Please enter a non-zero value for the Probability of Sale</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_cannot_be_after_the_End_Date</fullName>
        <active>true</active>
        <description>Start Date cannot be after the End Date</description>
        <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>The Start Date cannot be after the End Date</errorMessage>
    </validationRules>
</CustomObject>